@@ -1,5 +1,5 @@
 Package: lfactors
-Version: 0.6.0
+Version: 0.7.0
 Date: 2016-02-20
 Title: Factors with Levels
 Authors@R: c(person("Paul", "Bailey", role=c("aut", "cre"), email="pbailey@air.org"))
@@ -13,6 +13,6 @@ Description: Provides an extension to factors called 'lfactor' that are similar
 License: GPL-2
 RoxygenNote: 5.0.1
 NeedsCompilation: no
-Packaged: 2016-02-19 16:35:12 UTC; pbailey
+Packaged: 2016-02-27 06:14:05 UTC; pbailey
 Repository: CRAN
-Date/Publication: 2016-02-20 00:12:32
+Date/Publication: 2016-02-27 09:55:11
