@@ -1,25 +1,25 @@
-6de5b55d1a4deb821440060d0531694c *DESCRIPTION
-64552b56c407e4558a25a1987958f04d *NAMESPACE
-625066473a3b111fbb0b3d2940a1bdc5 *R/Ops.lfactor.R
-c1a08a44c08a1650e601140561c2e3a0 *R/all.R
-a6980d01d223c0dd227cbcab68b9d6aa *R/as.numeric.lfactor.R
+7f7e2ab9c796cd71e5201d3cd051c5a2 *DESCRIPTION
+8a375129a490134272af8f5dbd83249c *NAMESPACE
+be6e90c378e4a2e44400eee9bcf98a0d *R/Ops.lfactor.R
+ad364f6f8bbcf276bc896e600cd38437 *R/all.R
+ce2dda9d4c35386eea445cffce6da7bb *R/as.numeric.lfactor.R
 c5a6ac8395b4d844f9fd47c27cb85e12 *R/assign.R
 e783b6fd6cba3ea16131d71a44c2aafa *R/droplevels.R
-00842be1acb92a527aade76ebc0a9d6e *R/inlf.R
+86ecbb477b3c1455b8da47bab1ab85e1 *R/inlf.R
 cce7316259d4f8bf32ab64bd434357f5 *R/lfactor.R
 2364742367138ea8815d0561c61dd18b *R/lfactors-package.R
 cfe4657c14acc33c6602ab7ff7f4bba6 *R/llevels.R
-ff43dd1119276d78cd299805e87b2d97 *R/mlfactor.R
+6b5ad8485201391e3a19087bf30f7dbd *R/mlfactor.R
 c2fae0c04feee8126dd864df4bcf4d81 *R/print.lfactor.R
 efbc277c460f7f5ccbcb25106038ef60 *R/relevel.R
 f8b43d6770bf9aea37c70a596dda3897 *R/subset.R
 d071fd01a2f24b614e18edb7aabec8bf *R/switchllevels.R
-2f4ef61da1ba28fb9e8d9c8ef6e2019f *R/zzz.R
-c7be30039fc574861a92f4b6873b7035 *inst/NEWS.Rd
+817c9dfb2e32b0a35c2fca203f9427f1 *R/zzz.R
+1fad88168c9c2e595f1269ff9d5d4a8e *inst/NEWS.Rd
 d65d8244e95dfc7af74b358eef3b87e3 *man/inlf.Rd
 d16af87119eb037b0272e37634c69d95 *man/lfactor.Rd
 26088a7b82552110cf326c25c721eada *man/lfactors-package.Rd
 11281402960d1a15825b00d9020837d2 *man/llevels.Rd
 0e1e624e2b466b135cf24e3f3b38846e *man/mlfactor.Rd
 4f2745558b3725b2303b0f715162ddce *tests/testthat.R
-70f91259f4044d9cb2a0b767fdc94282 *tests/testthat/test_equals.R
+7a29b27ab66a32c2ffc66ec8cf46be4d *tests/testthat/test-equals.R
