@@ -3,6 +3,8 @@
 S3method("[",lfactor)
 S3method("[<-",lfactor)
 S3method(Ops,lfactor)
+S3method(as.double,lfactor)
+S3method(as.integer,lfactor)
 S3method(as.numeric,lfactor)
 S3method(droplevels,lfactor)
 S3method(print,lfactor)
