@@ -1,13 +1,33 @@
 #' @method Ops lfactor
 #' @export
 Ops.lfactor <- function(e1,e2) {
+  e10 <- e1
   if(.Generic %in% c("<", "<=", ">=", ">")) {
     if(inherits(e1, "lfactor")) {
       e1 <- as.numeric(e1)
+    } else {
+      if(inherits(e1, "character")) {
+        e2l <- levels(e2)
+        if(e1 %in% e2l) {
+          e1 <- as.numeric(llevels(e2)[e2l==e1])
+        } else {
+          return(rep(FALSE,length(e2)))
+        }
+      }
     }
     if(inherits(e2, "lfactor")) {
       e2 <- as.numeric(e2)
+    } else {
+      if(inherits(e2, "character")) {
+        e1l <- levels(e10)
+        if(e2 %in% e1l) {
+          e2 <- as.numeric(llevels(e10)[e1l==e2])
+        } else {
+          return(rep(FALSE,length(e1)))
+        }
+      }
     }
+    
     if(inherits(e1, "numeric") & inherits(e2, "numeric")) {
       return(eval(call(.Generic,e1,e2)))
     }
